# PCL_manipulation

pcd_read/: pcd_read.cpp  test_pcd.pcd
pcd_read_write/: CMakeLists.txt  input.pcd  read_write.cpp
pcd_write/: CMakeLists.txt  pcd_write.cpp
